fix(header): fixed breakpoint for gutters and logo size, fix spacing

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -14,14 +14,14 @@
   left: 0;
   height: var(--header-height);
   background: var(--color-background);
-  padding-right: 11px;
+  padding: 0 8px;
 
   &.divider {
     box-shadow: 0 1px 0 var(--color-divider-light);
   }
 
-  &.breakpoint-hit {
-    padding: 0 16px;
+  @media screen and (min-width: 42rem) {
+    padding: 0 24px;
   }
 
   &__right {
@@ -34,14 +34,14 @@
   display: flex;
   align-items: center;
   padding: 0 5px;
-  margin: 0 11px;
+  margin: 0 3px;
   color: var(--color-text);
   text-decoration: none;
 
   svg {
     width: 96px;
 
-    .breakpoint-hit & {
+    @media screen and (min-width: 42rem) {
       width: 137px;
     }
   }
@@ -66,4 +66,6 @@
 .menu-button {
   height: 100%;
   background: none;
+  padding: 0 5px;
+  margin: 0 3px;
 }
