--- a/src/components/global/header/headerFlyouts.scss
+++ b/src/components/global/header/headerFlyouts.scss
@@ -9,5 +9,5 @@
 }
 
 ::slotted(kyn-header-flyout) {
-  margin: 0 11px;
+  margin: 0 3px;
 }
