--- a/src/components/global/header/headerNav.scss
+++ b/src/components/global/header/headerNav.scss
@@ -41,7 +41,7 @@
 
   &.breakpoint-hit {
     ::slotted(kyn-header-link) {
-      margin: 0 11px;
+      margin: 0 3px;
     }
   }
 }
